tasky-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tasky-ingress
spec:
  defaultBackend:
    service:
      name: tasky-service
      port:
        number: 80
